--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "vite": "^6.1.0"
   },
   "dependencies": {
+    "@capacitor/app": "8.0.0",
+    "@capacitor/cli": "8.0.0",
+    "@capacitor/core": "8.0.0",
+    "@capacitor/haptics": "8.0.0",
+    "@capacitor/keyboard": "8.0.0",
+    "@capacitor/status-bar": "8.0.0",
     "bootstrap": "^5.3.3"
   }
 }
