--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "android": "vite build && npx cap sync android && npx cap open android"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "typescript": "~5.7.2",
     "vite": "^6.1.0"
   },
   "dependencies": {
+    "@capacitor/android": "8.0.0",
     "@capacitor/app": "8.0.0",
     "@capacitor/cli": "8.0.0",
     "@capacitor/core": "8.0.0",
-    "@capacitor/haptics": "8.0.0",
-    "@capacitor/keyboard": "8.0.0",
-    "@capacitor/status-bar": "8.0.0",
     "bootstrap": "^5.3.3"
   }
 }
