--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "vite": "^6.1.0"
   },
   "dependencies": {
-    "@capacitor/android": "8.0.1",
+    "@capacitor/android": "8.0.2",
     "@capacitor/app": "8.0.0",
-    "@capacitor/cli": "8.0.1",
-    "@capacitor/core": "8.0.1",
+    "@capacitor/cli": "^8.0.2",
+    "@capacitor/core": "^8.0.2",
     "bootstrap": "^5.3.3"
   },
   "overrides": {
